@@ -44,6 +44,8 @@ bzr-svn 0.4.11    UNRELEASED
 
    * Much faster Repository.get_revision_delta(). (#127030)
 
+   * Support push --overwrite. (#118787)
+
   BUG FIXES
 
    * Now uses absolute imports and no longer adds plugin directory to the 
